<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- date strings -->
    <string name="dateMoreThanAWeek">%d weeks ago</string>
    <string name="dateLastWeek">%d days ago</string>
    <string name="dateYesterday">yesterday</string>
    <string name="dateToday">today</string>
    <string name="app_name">RealFarm</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="map">Map</string>
    <string name="plot">Plot</string>
    <string name="news">News</string>
    <string name="friends">Friends</string>
    <string name="you">Profile</string>
    <string name="menu">Menu</string>
    <string name="recommendation">Recommendations</string>
    <string name="exitMsg">Sure you want to quit?</string>
    <string name="exitTitle">Exit</string>
    <string name="editPoint">Edit lat/lon</string>
    <string name="editAction">Edit Action</string>
    <string name="seed">Seed</string>
    <string name="actions">Actions</string>
    <string name="lblPassword">Enter Administrator Password </string>
    <string name="btn_submit">Submit</string>
    <string name="mobilenumber">Mobile Number</string>

    <!-- orbolanos: correctly formatted names: <type>_<name> -->
    <string name="placeholder_text">Text</string>
    <string name="placeholder_number">1</string>
    <!-- homescreen -->
    <string name="homescreen_label_temperature">26°</string>
    <string name="homescreen_label_plots">Plots</string>
    <string name="homescreen_label_diary">Diary</string>
    <string name="homescreen_label_market_price">3150</string>
    <string name="homescreen_label_yield_unit">qt/acre</string>
    <string name="homescreen_label_yield_number">30</string>
    <!-- diary -->
    <string name="diary_label_description">List of actions performed</string>
    <string name="diary_label_title">Title</string>
    <!-- user aggregate item -->
    <string name="user_aggregate_label_date">27.8</string>
    <string name="user_aggregate_label_user_name">John Doe</string>
    <!-- dialog  select language -->
    <string name="dialog_select_language_title">Please select your language</string>
    <string name="dialog_select_action_title">Please select an action</string>
    <!-- buttons -->
    <string name="button_ok">Done</string>
    <string name="button_back_to_videos"> Back to Videos</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_add_plot">Add Plot</string>
    <string name="label_arrow">></string>
    <string name="date_today">today</string>
    <string name="date_yesterday">yesterday</string>
    <string name="date_last_week">%d days ago</string>
    <string name="date_more_than_a_week">%d weeks ago</string>
    <!-- Sowing action -->
    <string name="sowing_variety">Variety</string>
    <string name="sowing_amount">Amount</string>
    <string name="sowing_no">No.</string>
    <string name="sowing_serus">serus</string>
    <string name="sowing_month">Month</string>
    <string name="sowing_day">Day</string>
    <string name="sowing_date">Date</string>
    <string name="sowing_treatment">Treatment</string>
    <string name="sowing_intercrop">Intercrop</string>
    <string name="sowing_crop_type">Crop Type</string>
    <!-- Admin -->
    <string name="admin_user_list_button_add_user">Add User</string>

    <string-array name="array_languages">
        <item>Kannada</item>
        <item>Telugu</item>
        <item>Hindi</item>
        <item>Tamil</item>
        <item>Malayalam</item>
    </string-array>
    <string-array name="array_months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>