<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/def_img" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/seed_type_sow_tr"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin"
            android:background="@android:drawable/list_selector_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingRight="@dimen/margin" >

            <TextView
                android:id="@+id/variety_sow_txt"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/sowing_variety"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_large" />

            <ImageView
                android:id="@+id/variety_sow_img_btn"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/variety_sow" />

            <TextView
                android:id="@+id/dlg_var_text_sow"
                android:layout_width="170dp"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/empty"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:text="@string/sowing_variety"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_large" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/units_sow_tr"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin"
            android:background="@android:drawable/list_selector_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingRight="@dimen/margin" >

            <TextView
                android:id="@+id/amount_sow_txt"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/sowing_amount"
                android:textColor="#000000"
                android:textSize="@dimen/font_large" />

            <ImageView
                android:id="@+id/amount_sow_img_btn"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/amount" />

            <TextView
                android:id="@+id/dlg_lbl_unit_no_sow"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/empty"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:text="@string/sowing_no"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_large" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|left"
                android:text="@string/sowing_serus"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="@dimen/font_large" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/day_sow_tr"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin"
            android:background="@android:drawable/list_selector_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingRight="@dimen/margin" >

            <TextView
                android:id="@+id/date_sow_txt"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/sowing_date"
                android:textColor="#000000"
                android:textSize="@dimen/font_large" />

            <ImageView
                android:id="@+id/date_sow_img_btn"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/date" />

            <TextView
                android:id="@+id/dlg_lbl_day_sow"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/empty"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:text="@string/sowing_day"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_large" />

            <TextView
                android:id="@+id/dlg_lbl_month_sow"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/empty"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:text="@string/sowing_month"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_large" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/treatment_sow_tr"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin"
            android:background="@android:drawable/list_selector_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingRight="@dimen/margin" >

            <TextView
                android:id="@+id/treat_sow_txt"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/sowing_treatment"
                android:textColor="#000000"
                android:textSize="19sp" />

            <ImageView
                android:id="@+id/treat_sow_img_btn"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/treatment" />

            <TextView
                android:id="@+id/dlg_lbl_treat_sow"
                android:layout_width="170dp"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/empty"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:text="@string/sowing_treatment"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_large" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/intercrop_sow_tr"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin"
            android:background="@android:drawable/list_selector_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingRight="@dimen/margin" >

            <TextView
                android:id="@+id/intercrop_sow_txt"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/sowing_intercrop"
                android:textColor="#000000"
                android:textSize="@dimen/font_large" />

            <ImageView
                android:id="@+id/intrecrop_sow_img_btn"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/mainintercrop" />

            <TextView
                android:id="@+id/dlg_lbl_intercrop_sow"
                android:layout_width="170dp"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/empty"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:text="@string/sowing_crop_type"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_large" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/layout_bottom_bar" />

</RelativeLayout>