<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	 android:weightSum="1">
  <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="User details"
    android:textSize="25sp" android:textStyle="bold"
    android:gravity="center" android:layout_marginBottom="20dp"/>

  <TextView
      android:id="@+id/textView1"
      android:layout_width="304dp"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/firstname" />

<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
<LinearLayout android:id="@+id/linearLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">
<LinearLayout android:id="@+id/linearLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content">

    <EditText
        android:id="@+id/et_fileName1"
        android:layout_width="321dp"
        android:layout_height="wrap_content" 
        android:singleLine="true"
       >
         <requestFocus />
</EditText>
</LinearLayout>

<TextView
    android:id="@+id/TextView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/lastname"
     />

<EditText
    android:id="@+id/et_fileName2"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:singleLine="true" />

<TextView
    android:id="@+id/TextView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/mobilenumber" />


<EditText
    android:id="@+id/et_writtenText"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:singleLine="true" />


</LinearLayout>
</ScrollView>

<Button
    android:id="@+id/OK"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="OK"
    android:textSize="28sp"
    android:textStyle="bold" />

</LinearLayout>